2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Check casts from arrays.
	* testsuite/poke.pkl/cast-array-diag-8.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_cdiv): Fix detection of division by zero
	for offsets with implicit magnitudes.
	(pkl_fold_div): Likewise.
	* testsuite/poke.pkl/cdiv-offsets-3.pk: New file.
	* testsuite/poke.pkl/div-offsets-4.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_mod): Fix detection of division by zero
	for offsets with implicit magnitudes.
	* testsuite/poke.pkl/mod-offsets-5.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-anal.c (pkl_anal1_ps_offset): New handler.
	(pkl_phase_anal1): Add handler.
	* testsuite/poke.pkl/offset-type-diag-3.pk: New test.
	* testsuite/poke.pkl/offsets-diag-2.pk: Likewise.
	* doc/poke.texi (Offset Literals): Document that the unit of
	offsets shall be bigger than 0.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Several updates.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-file.c (print_info_file): Use the IO's id as tags.
	(pk_cmd_info_files): Adapt accordingly.
	* testsuite/poke.cmd/file-mode.pk: Adjust accordingly.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-lex.l: Ignore form feed characters.
	* testsuite/poke.pkl/formfeedchar.pk: New file.
	* doc/poke.texi (Comments): New chapter.

2020-01-12  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm-val.c (pvm_print_val): Fix printing of hexadecimal
	values with odd widths.
	* testsuite/poke.map/maps-uint-19.pk: Test for the above.

2020-01-12 John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi: Fixed various typos.

2020-01-12 Egeyar Bagcioglu <egeyar@gmail.com>

	* src/ios.c (ios_get): Remove.
	* src/ios.h (ios_get): Likewise.
	* src/pk-file.c (pk_cmd_file): Replace the bogus call to ios_get
	with ios_search_by_id.