@@ -220,6 +220,7 @@ PKL_DEF_INSN (PKL_INSN_SUBSTR, "", "substr")
 
 PKL_DEF_INSN (PKL_INSN_MKO, "", "mko")
 PKL_DEF_INSN (PKL_INSN_OGETM, "", "ogetm")
+PKL_DEF_INSN (PKL_INSN_OSETM, "", "osetm")
 PKL_DEF_INSN (PKL_INSN_OGETU, "", "ogetu")
 PKL_DEF_INSN (PKL_INSN_OGETBT, "", "ogetbt")
 
